Overflow issue

--- a/css/ber-dbbaed.webflow.css
+++ b/css/ber-dbbaed.webflow.css
@@ -1085,6 +1085,7 @@
 .background-video {
   height: 800px;
   mix-blend-mode: normal;
+  overflow: visible;
 }
 
 .image-11 {
